--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/ionicons.min.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
@@ -35,6 +36,17 @@
   </head>
 
   <body ng-app="starter">
+    <header>
+      <div class="bar bar-header bar-dark">
+          <div class="row">
+              <div class="col col-80"><i class="icon ion-gear-a"></i> Material Supply Hub</div>
+              <div class="col col-20"><i class="icon ion-person"></i> Login</div>
+            </ion-row>
+          </div>
+      </header>
     <ion-nav-view></ion-nav-view>
+    <footer>
+     <div class="bar bar-footer bar-stable">footer links and stuff</div>
+     </footer>
   </body>
 </html>
