- Added profile, create profile, about and user-home pages

--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,7 @@
       <div class="bar bar-header bar-dark">
           <div class="row">
               <div class="col col-80"><i class="icon ion-gear-a"></i> Material Supply Hub</div>
-              <div class="col col-20"><i class="icon ion-person"></i> Login</div>
+              <div class="col col-20" data-ng-controller="userCtrl"><i class="icon ion-person"></i> {{ userName }}</div>
             </ion-row>
           </div>
       </header>
