many updates to product

--- a/www/index.html
+++ b/www/index.html
@@ -48,5 +48,11 @@
           </div>
       </header>
     <ion-nav-view></ion-nav-view>
+    <!--<div class="bar bar-footer bar-stable">
+      <div class="title">
+        <span class="left"><a href="#/app/home">Home</a>  |  <a href="#/app/about">About MSH</a></span>
+        <span class="right">Copyright 2016 Material Supply Hub</span>
+      </div>
+    </div>-->
   </body>
 </html>
