--- a/www/index.html
+++ b/www/index.html
@@ -16,13 +16,11 @@
       }
     </script>-->
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
     <link href="css/ionicons.min.css" rel="stylesheet">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
+    <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -42,20 +40,26 @@
   </head>
 
   <body ng-app="starter">
-    <ion-header-bar class="bar-dark site-header">
-            <div class="col"><a class="branding" href="#/"><i class="icon ion-gear-a logo"></i></a> <span class="branding">Material Supply Hub</span></div>
-            <div class="col item-input-inset">
+    <div class="bar bar-header bar-dark site-header">
+     <div class="row">
+            <div class="col">
+              <a class="brand" href="/">
+                <img src="img/logo-msh.png" alt="Material Supply Hub" class="brand" />
+              </a>
+            </div>
+            <div class="col right item-input-inset">
                   <label class="item-input-wrapper">
                   <i class="icon ion-ios-search placeholder-icon"></i>
-                  <input type="search" placeholder="Search">
+                  <input type="search" style="width: 100%;" placeholder="Find: RFQ, Quote, Material, Supplier, Manufacturer, etc.">
                 </label>
             </div>
-      </ion-header-bar>
-    <ion-nav-view></ion-nav-view>
-    <ion-footer-bar class="bar-stable">
+         </div>
+      </div>
+    <ion-nav-view ng-class="nav"></ion-nav-view>
+    <ion-footer-bar class="bar-dark">
       <div class="title">
-        <span class="left"><a href="#/app/home">Home</a>  |  <a href="#/app/about">About MSH</a></span>
-        <span class="right">Copyright 2016 Material Supply Hub</span>
+        <span class="left footer"><a href="#/app/home">Home</a>  |  <a href="#/app/about">About MSH</a></span>
+        <span class="right footer">Copyright 2016 Material Supply Hub</span>
       </div>
     </ion-footer-bar>
   </body>
