pushed latest version including supplier pages and admin screens. Updated menu, marketplace page and dashboard widgets.

--- a/www/index.html
+++ b/www/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
-    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <!--<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">-->
     <title></title>
 
     <link rel="manifest" href="manifest.json">
@@ -35,32 +36,33 @@
     <script src="js/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>
 
-   <!-- third party -->
-   <script src="https://use.fontawesome.com/ddc63c54c2.js"></script>
-  </head>
+    <!-- third party -->
+    <script src="https://use.fontawesome.com/ddc63c54c2.js"></script>
+</head>
 
-  <body ng-app="starter">
+<body ng-app="starter">
     <div class="bar bar-header bar-dark site-header">
-     <div class="row">
+        <div class="row">
             <div class="col">
-              <a class="brand" href="/">
-                <img src="img/logo-msh.png" alt="Material Supply Hub" class="brand" />
-              </a>
+                <a class="brand" href="/">
+                    <img src="img/logo-msh.png" alt="Material Supply Hub" class="brand" />
+                </a>
             </div>
             <div class="col right item-input-inset">
-                  <label class="item-input-wrapper">
+                <label class="item-input-wrapper">
                   <i class="icon ion-ios-search placeholder-icon"></i>
                   <input type="search" style="width: 100%;" placeholder="Find: RFQ, Quote, Material, Supplier, Manufacturer, etc.">
                 </label>
             </div>
-         </div>
-      </div>
+        </div>
+    </div>
     <ion-nav-view ng-class="nav"></ion-nav-view>
     <ion-footer-bar class="bar-dark">
-      <div class="title">
-        <span class="left footer"><a href="#/app/home">Home</a>  |  <a href="#/app/about">About MSH</a></span>
-        <span class="right footer">Copyright 2016 Material Supply Hub</span>
-      </div>
+        <div class="title">
+            <span class="left footer"><a href="#/app/home">Home</a>  |  <a href="#/app/about">About MSH</a></span>
+            <span class="right footer">Copyright 2016 Material Supply Hub</span>
+        </div>
     </ion-footer-bar>
-  </body>
+</body>
+
 </html>
